Fixed custom difficulty text overflow

--- a/src/index.styl
+++ b/src/index.styl
@@ -654,6 +654,10 @@ html
     color #ffffff
     font-size 15px
     padding 2px 8px
+    max-width 300px
+    overflow hidden
+    text-overflow ellipsis
+    white-space nowrap
   #modifiers
     color #ffffff
     font-size 15px
